feat: local-first architecture + complete HIGH security fixes
- Refactor config.py: Ollama default, Azure/OpenAI optional
- Add audit logging: JSON structured logs for all tool executions
- Add input validation: Pydantic models for all tool inputs
- Add authentication: Optional API key layer for service exposure
- Pin dependencies: Exact versions in requirements.txt
- Update joke agents: DadJokes/KnockKnock use unified config
- Update .env.example: Document all security/LLM options

All HIGH priority security issues resolved.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
-python-dotenv>=1.0.1
-rich>=13.9.0
-httpx>=0.28.0
+# =============================================================================
+# AllTheVibes — Python Dependencies
+# =============================================================================
+# Pin all versions for reproducibility and supply chain security.
+# Update with: pip-compile --upgrade requirements.in
+# =============================================================================
+
+# Core dependencies (required)
+python-dotenv==1.0.1
+rich==13.9.0
+httpx==0.28.0
+
+# Input validation (security)
+pydantic==2.10.4
+
+# Optional: Azure OpenAI backend
+# Uncomment if using Azure/Foundry deployment:
+# openai==1.58.0
+# azure-identity==1.19.0
+
+# Optional: OpenAI backend
+# Uncomment if using OpenAI directly:
+# openai==1.58.0
