--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,69 @@
-# Ollama server URL (default: http://localhost:11434)
+# =============================================================================
+# AllTheVibes — LLM Configuration
+# =============================================================================
+# This system is LOCAL-FIRST. No API keys required for basic usage.
+# Just install Ollama and run: ollama pull qwen2.5:7b
+#
+# Backend priority (auto-detected):
+#   1. Ollama (local) — DEFAULT, no cloud needed
+#   2. Azure OpenAI — if AZURE_OPENAI_ENDPOINT is set
+#   3. OpenAI — if OPENAI_API_KEY is set
+#
+# Override auto-detection with:
+#   LLM_BACKEND=ollama|azure|openai
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Backend Override (optional)
+# -----------------------------------------------------------------------------
+# LLM_BACKEND=ollama
+
+# -----------------------------------------------------------------------------
+# Ollama (Local) — DEFAULT
+# -----------------------------------------------------------------------------
+# Install: https://ollama.com
+# Start:   ollama serve
+# Pull:    ollama pull qwen2.5:7b
 OLLAMA_BASE_URL=http://localhost:11434
 
-# Model to use (must be pulled first with: ollama pull <model>)
-# Good options with tool-calling support:
-#   qwen2.5:7b     - Fast, good tool use (recommended)
-#   llama3.1:8b    - Meta's model, solid tool support
-#   mistral:7b     - Good quality, fast
-#   qwen2.5:14b    - Higher quality, needs more RAM
-#   llama3.1:70b   - Best quality, needs significant RAM/GPU
+# Recommended models (must pull first):
+#   qwen2.5:7b      — Fast, good tool use (RECOMMENDED, ~4GB RAM)
+#   qwen2.5:14b     — Higher quality (~8GB RAM)
+#   llama3.1:8b     — Meta's model, solid quality (~5GB RAM)
+#   mistral:7b      — Good general purpose (~4GB RAM)
+#   deepseek-coder:6.7b — Excellent for code tasks (~4GB RAM)
 OLLAMA_MODEL=qwen2.5:7b
+
+# -----------------------------------------------------------------------------
+# Azure OpenAI (Optional) — for enterprise/Foundry deployments
+# -----------------------------------------------------------------------------
+# Uses Entra ID (Azure AD) token auth by default
+# AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com
+# AZURE_OPENAI_DEPLOYMENT=gpt-4o
+# AZURE_OPENAI_API_VERSION=2024-12-01-preview
+
+# -----------------------------------------------------------------------------
+# OpenAI (Optional) — direct API access
+# -----------------------------------------------------------------------------
+# OPENAI_API_KEY=sk-...
+# OPENAI_MODEL=gpt-4o-mini
+
+# =============================================================================
+# Security Configuration
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Authentication (Optional) — for service exposure
+# -----------------------------------------------------------------------------
+# When REQUIRE_AUTH=true, an API key is required for all tool executions.
+# Use this when exposing the agent as an HTTP service.
+# For local CLI usage, authentication is implicit (terminal access = auth).
+# REQUIRE_AUTH=false
+# AGENT_API_KEY=your-secret-api-key-here
+
+# -----------------------------------------------------------------------------
+# Audit Logging (Optional)
+# -----------------------------------------------------------------------------
+# Log all tool executions to a file for security monitoring.
+# If not set, logs go to stderr.
+# AUDIT_LOG_FILE=/var/log/allthevibes/audit.log
